--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,9 @@ tzdata==2023.3
 urllib3==2.1.0
 yarg==0.1.9
 yarl==1.9.3
+bs4==0.0.1
+cffi==1.15.1
+pip-system-certs==4.0
+python-certifi-win32==1.6.1
+requests==2.28.2
+smtpmail==1.0.1
